# har-datasets

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  test.py  test_imu.ipynb
config/: cfg.yaml
config/dataset/: uci_har.yaml  wisdm_12.yaml  wisdm_19_watch.yaml  wisdm_watch.yaml
datasets/: .gitignore
metadata/dcat-ap/: catalogue.turtle  uci-har.turtle
metadata/mlcroissant/: uci-har.json
notebooks/: dask.ipynb  dcatap.ipynb  example.ipynb  spect.ipynb  test.ipynb  test_meta_learning.ipynb  test_sampler.ipynb  test_transform.ipynb  wavelets.ipynb
notebooks/old/: croissant.ipynb  example.ipynb  spectro.ipynb
notebooks/plotting/: parallel_times.json  sequential_times.json  session_sizes.json  session_sizes.py  timing.py  vis.ipynb
src/har_datasets/: __init__.py
src/har_datasets/config/: config.py  configs.py  hashing.py
src/har_datasets/dataset/: croissant_dataset.py  dataset.py  get_har_dataset.py  har_dataset.py  pipeline.py  sample.py  split.py
src/har_datasets/features/: checking.py  differentiating.py  loading.py  spectrogram.py
src/har_datasets/loading/: loading.py
src/har_datasets/old/: dataparser.py  normalizer.py  schema.py  uci_har.py
src/har_datasets/parsers/: parse_wisdm_12.py  supported.py
src/har_datasets/parsing/: downloading.py  loading.py  parsing.py
src/har_datasets/pipeline/: checking.py  differentiating.py  loading.py  normalizing.py  pipeline.py  resampling.py  selecting.py  spectrogram.py  windowing.py
src/whar_datasets/: __init__.py
tests/: test_random_splitter.py
(+168 files in other folders)
