[project]
name = "whar-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask>=2025.5.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mlcroissant>=1.0.17",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250527",
    "pyarrow>=20.0.0",
    "pywavelets>=1.8.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sempyro>=2.0.1",
    "short-unique-id>=0.2.1",
    "shortuuid>=1.0.13",
    "tensorflow>=2.20.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "types-tensorflow>=2.18.0.20250516",
    "types-tqdm>=4.67.0.20250516",
    "umap-learn>=0.5.9.post2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
